# rdf_translator

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
src/converter/: converter.rs  mod.rs
src/definition/: definition.rs  ebucore.rs  francetv.rs  mod.rs  owl.rs  rdf.rs  rdfs.rs  undefined.rs  xsi.rs
src/mapper/: json.rs  loader.rs  mod.rs
tests/: loader.rs  mapping.json  ntriple.txt  turtle.txt  video.json
