[package]
name = "rdf_translator"
version = "0.1.2"
authors = ["Marc-Antoine Arnaud <marc.antoine@nomalab.com>"]
description = "Automatic conversion form JSON to RDF based on mapping"
keywords = ["RDF", "json", "Turtle", 'N-Triples']
license = "MIT"
repository = "https://github.com/media-io/rdf_translator"
homepage = "https://github.com/media-io/rdf_translator"
documentation = "https://docs.rs/rdf_translator"
readme = "README.md"

[dependencies]
jsonpath = "0.1.0"
regex = "0.2.10"
serde = "0.9.0"
serde_derive = "0.9.0"
serde_json = "0.9.0"
rdf = "0.1.1"
