[package]
name = "rdf_translator"
version = "0.1.3"
authors = ["Marc-Antoine Arnaud <marc.antoine@nomalab.com>"]
description = "Automatic conversion form JSON to RDF based on mapping"
keywords = ["RDF", "json", "Turtle", 'N-Triples']
license = "MIT"
repository = "https://github.com/media-io/rdf_translator"
homepage = "https://github.com/media-io/rdf_translator"
documentation = "https://docs.rs/rdf_translator"
readme = "README.md"

[dependencies]
jsonpath = {git = "https://github.com/MarcAntoine-Arnaud/jsonpath-rs"}
regex = "0.2.10"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.9"
rdf = "0.1.4"

[badges]
travis-ci = { repository = "media-io/rdf_translator" }
